--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -64,11 +64,11 @@ ul {
 }
 
 .nav-item img {
-    height: 87%;
-    width: 25%;
-    border-radius: 1rem;
+    height: 35px;
+    width: 35px;
+    border-radius: 2rem;
     object-fit: cover;
-    margin-left: 2rem;
+    margin: 0 auto;
 }
 
 ul li a {
@@ -131,13 +131,7 @@ button:hover {
 
 /* Media Queries for Responsive Design */
 
-@media (max-width: 1180px) {
-    .nav-item img {
-        border-radius: 2rem;
-        height: 45px;
-        width: 50px;
-    }
-}
+
 
 @media (max-width: 768px) {
     nav {
@@ -156,10 +150,6 @@ button:hover {
         /* Move hamburger menu to the right */
     }
 
-    .nav-item img {
-        height: 100%;
-        width: 30%;
-    }
 
     ul {
         flex-direction: column;
@@ -199,13 +189,7 @@ button:hover {
         font-size: 14px;
     }
 
-    .nav-item img {
-        height: 70%;
-        width: 20%;
-        border-radius: 1rem;
-        object-fit: cover;
-        margin-left: 3.5rem;
-    }
+
 
     .hamburger-menu {
         margin-left: auto;
