--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: #f5f5f5;
+    max-width: 98vw;
 }
 
 .register-container {
@@ -14,7 +15,6 @@ body {
     display: flex;
     gap: 5rem;
     justify-content: space-between;
-    max-width: 100%;
 }
 
 .register-title {
