addd register state

--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -245,7 +245,7 @@
     width: 20vw;
     text-align: center;
     font-size: 1.3rem;
-    color: indigo;
+    color: black;
     padding: 0.7rem 0rem;
     height: 2.7rem;
     cursor: no-drop;
