--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
 
 body {
     background-color: #f5f5f5;
-    max-width: 98vw;
+    overflow-x: hidden;
 }
 
 .register-container {
@@ -15,6 +15,7 @@ body {
     display: flex;
     gap: 5rem;
     justify-content: space-between;
+    max-width: 100%;
 }
 
 .register-title {
@@ -238,6 +239,20 @@ body {
     border-bottom: 2px solid green;
     color: indigo;
     transition: 0.5s;
+}
+
+.submitting-button {
+    display: block;
+    background-color: white;
+    border-radius: 0.4rem;
+    width: 20vw;
+    text-align: center;
+    font-size: 1.3rem;
+    color: black;
+    padding: 0.7rem 0rem;
+    height: 2.7rem;
+    cursor: no-drop;
+    font-family: sans-serif;
 }
 
 /* Media Queries for Responsive Design */
