--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,7 @@
 body {
     background-color: #f5f5f5;
     overflow-x: hidden;
+    font-family: sans-serif;
 }
 
 .register-container {
@@ -58,6 +59,8 @@ body {
     height: 100%;
     width: 100%;
     margin: 0 auto;
+    font-family: sans-serif;
+    text-align: justify;
 }
 
 .signUp::before {
@@ -253,6 +256,23 @@ body {
     height: 2.7rem;
     cursor: no-drop;
     font-family: sans-serif;
+}
+
+.redirect-login-register {
+    font-weight: bold;
+    color: red;
+}
+
+.redirect-login-register a {
+    color: green;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.redirect-login-register a:hover {
+    border-bottom: 1px solid indigo;
+    color: indigo;
+    transition: 0.5s;
 }
 
 /* Media Queries for Responsive Design */
