--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -15,7 +15,7 @@
     flex: 1;
     border-radius: 8px;
     margin: 0 0.5rem;
-    height: 80vh;
+    height: 75vh;
 }
 
 .login-fields-container {
@@ -41,8 +41,13 @@
 }
 
 .social {
-    width: 40%;
+    width: 50%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .login-social-container {
@@ -62,6 +67,8 @@
     padding: 0.5rem;
     width: 70%;
     margin: 0 auto;
+    font-family: sans-serif;
+    text-align: justify;
 
 }
 
@@ -251,6 +258,7 @@
     cursor: no-drop;
     font-family: sans-serif;
 }
+
 
 /* Media Queries for Responsive Design */
 
