--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -249,7 +249,7 @@
     display: block;
     background-color: white;
     border-radius: 0.4rem;
-    width: 20vw;
+    /* max-width: 20vw; */
     text-align: center;
     font-size: 1.3rem;
     color: black;
@@ -267,9 +267,11 @@
         flex-direction: column;
         align-items: stretch;
         margin: 0 auto;
+
     }
 
     .login-form .social {
+        height: 68vh;
         width: 90%;
     }
 
@@ -286,7 +288,7 @@
 
     .login-social-container {
         width: 100%;
-        height: 70vh;
+        height: 100%;
         margin-bottom: 1rem;
     }
 
@@ -294,10 +296,9 @@
         width: 80%;
     }
 
-
-
-    .submitting-button {
+    .login-social-option span {
         width: 50vw;
+        margin: 0 auto;
     }
 
     .login-heading {
@@ -329,8 +330,10 @@
         width: 100%;
     }
 
-    .submitting-button {
-        width: 60vw;
+    .login-social-option span {
+        width: 70vw;
+        margin: 0 auto;
+        font-size: 1rem;
     }
 
     .login-button {
