--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -133,7 +133,7 @@
         height: 80px;
         justify-content: left;
         margin-bottom: 3rem;
-        border: 3px solid green;
+        border: 2px solid gray;
     }
 }
 
