--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -76,7 +76,8 @@ ul li a:hover {
 }
 
 .get-into:active,
-.get-start:active {
+.get-start:active,
+.dashboard:active {
     color: green;
     border: 1px solid green;
     border-radius: 0.2rem;
