--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -107,25 +107,28 @@
     align-items: center;
     justify-content: center;
     background-color: white;
-    padding: 0 0.6rem;
+    padding: 10px 18px;
     border-radius: 0.4rem;
+    gap: 0.8rem;
 }
+
 .wait-spinner-login {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    gap: 1rem;
 }
 
 .spinner-green {
-    height: 40px;
-    width: 40px;
+    height: 25px;
+    width: 25px;
+    filter: invert(100%) brightness(100%) contrast(100%);
 }
 
 .spinner {
     mix-blend-mode: multiply;
-    height: 40px;
-    width: 40px;
+    height: 25px;
+    width: 25px;
 }
 
 .plant-register img {
@@ -222,6 +225,8 @@
 .login-submit .loginButton:hover:not(:disabled) {
     background-color: #1b5e20;
 }
+
+
 
 /* Register Redirect */
 .goto-Register {
