--- a/client/src/styles/homePage.css
+++ b/client/src/styles/homePage.css
@@ -4,7 +4,7 @@
 
 .filter {
     width: 20vw;
-    height: 30vh;
+    height: 45vh;
     margin-left: 1rem;
     padding: 1rem;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
@@ -120,7 +120,7 @@
 }
 
 .filter-by-category {
-    height: 100px;
+    height: 200px;
     overflow-y: auto;
     padding: 0 0.4rem;
     margin-bottom: 1rem;
@@ -130,6 +130,21 @@
     display: flex;
     gap: 0.5rem;
     text-transform: capitalize;
+}
+
+.apply {
+    border: none;
+    padding: 0.4rem 0;
+    border-radius: 0.4rem;
+    background-color: tomato;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.apply:hover {
+    background-color: rgb(251, 108, 83);
 }
 
 
@@ -146,25 +161,36 @@
 
     .container {
         flex-direction: column;
-
     }
 
     .filter {
         flex-direction: row;
-        width: 63%;
+        width: 90%;
         margin: 0 auto;
-        height: 100px;
+        height: 150px;
         overflow: hidden;
+        align-items: center;
+        gap: 0.4rem;
     }
 
     .range-input {
-        width: 100%;
-        max-width: 100px;
+        max-width: 50%;
+    }
+
+    .apply{
+        width: 100px;
+        height: 50px;
     }
 
     .filter-by-category {
-        overflow-x: auto;
-        padding-bottom: 0.5rem;
+      height: 100px;
+      overflow-y: auto;
+      margin-top: 3rem;
+      overflow-x: hidden;
+    }
+
+    .filter-by-price{
+       width: 150px;
     }
 
 }
