--- a/client/src/styles/homePage.css
+++ b/client/src/styles/homePage.css
@@ -1,3 +1,5 @@
+/* General Styles */
+
 .container {
     display: flex;
 }
@@ -15,15 +17,13 @@
     justify-content: center;
 }
 
-
-
-
 .product-home-grid {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
     padding: 20px;
+    position: relative;
 }
 
 .custom-product-card {
@@ -95,24 +95,25 @@
 
 .custom-update-button,
 .custom-remove-button {
-    border: none;
     border-radius: 5px;
     padding: 10px;
     font-size: 0.9rem;
     cursor: pointer;
-    background-color: #007bff;
-    color: #fff;
     display: flex;
     align-items: center;
     gap: 5px;
 }
 
 .custom-update-button {
+    width: 55%;
     background-color: #28a745;
+    color: #fff;
 }
 
 .custom-remove-button {
     background-color: #dc3545;
+    color: #fff;
+    width: 40%;
 }
 
 .spinner-green {
@@ -120,7 +121,7 @@
 }
 
 .filter-by-category {
-    height: 200px;
+    height: 250px;
     overflow-y: auto;
     padding: 0 0.4rem;
     margin-bottom: 1rem;
@@ -147,8 +148,88 @@
     background-color: rgb(251, 108, 83);
 }
 
+/* Hamburger Menu Styles */
 
-@media (max-width: 768px) {
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    padding: 1rem;
+    width: 250px;
+    height: 100vh;
+    z-index: 1000;
+}
+
+.hamburger-menu.active {
+    display: flex;
+    height: 90vh;
+    margin-top: 5rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 8px;
+    border: 0.1px solid rgb(199, 197, 197);
+}
+
+
+.hamburger-menu.active span {
+    border-radius: 0.4rem;
+    font-size: 1.4rem;
+    background-color: tomato;
+    padding: 0.5rem;
+    display: inline-block;
+    width: 20%;
+    text-align: center;
+    margin-bottom: 1rem;
+    color: white;
+    cursor: pointer;
+}
+
+.hamburger-menu.active span:hover{
+    background-color: rgb(240, 78, 50);
+}
+
+
+.hamburger-menu-button {
+    position: absolute;
+    font-size: 1.5rem;
+    top: 10%;
+    left: 95%;
+    cursor: pointer;
+    padding: 0.5rem;
+    position: absolute;
+    background-color: green;
+    color: white;
+    z-index: 3;
+    font-weight: bold;
+    border-radius: 0.4rem;
+    height: 5%;
+}
+
+.hamburger-menu-button:hover{
+background-color: rgb(24, 156, 24);
+}
+
+.hamburger-menu-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+
+
+/* Responsive Styles */
+
+@media (max-width: 786px) {
+    .filter {
+        display: none;
+    }
+
+    .hamburger-menu-button {
+        top: 12%;
+        left: 92%;
+    }
+
     .product-home-grid {
         flex-direction: column;
         align-items: center;
@@ -160,37 +241,22 @@
     }
 
     .container {
+        position: relative;
         flex-direction: column;
     }
 
     .filter {
-        flex-direction: row;
-        width: 90%;
-        margin: 0 auto;
-        height: 150px;
-        overflow: hidden;
-        align-items: center;
-        gap: 0.4rem;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        margin: 0;
+        padding: 0;
     }
 
-    .range-input {
-        max-width: 50%;
+
+    .filter-by-price {
+        width: 150px;
     }
 
-    .apply{
-        width: 100px;
-        height: 50px;
-    }
-
-    .filter-by-category {
-      height: 100px;
-      overflow-y: auto;
-      margin-top: 3rem;
-      overflow-x: hidden;
-    }
-
-    .filter-by-price{
-       width: 150px;
-    }
 
 }
