--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -121,14 +121,14 @@ button:hover {
 }
 
 /* Hamburger Menu */
-.hamburger-menu {
+.hamburger-nav-menu {
     display: none;
     flex-direction: column;
     cursor: pointer;
     gap: 4px;
 }
 
-.hamburger-menu span {
+.hamburger-nav-menu span {
     display: block;
     width: 25px;
     height: 3px;
@@ -138,15 +138,15 @@ button:hover {
 }
 
 /* Change the look when open */
-.hamburger-menu.open span:nth-child(1) {
+.hamburger-nav-menu.open span:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
 }
 
-.hamburger-menu.open span:nth-child(2) {
+.hamburger-nav-menu.open span:nth-child(2) {
     opacity: 0;
 }
 
-.hamburger-menu.open span:nth-child(3) {
+.hamburger-nav-menu.open span:nth-child(3) {
     transform: rotate(-45deg) translate(5px, -5px);
 }
 
@@ -165,7 +165,7 @@ button:hover {
         /* Align logo to the left */
     }
 
-    .hamburger-menu {
+    .hamburger-nav-menu {
         display: flex;
         margin-left: auto;
         /* Move hamburger menu to the right */
@@ -212,7 +212,7 @@ button:hover {
 
 
 
-    .hamburger-menu {
+    .hamburger-nav-menu {
         margin-left: auto;
         /* Align hamburger menu to the right */
     }
