--- a/client/src/styles/homePage.css
+++ b/client/src/styles/homePage.css
@@ -169,6 +169,7 @@
     margin-top: 5rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 8px;
     border: 0.1px solid rgb(199, 197, 197);
+    z-index: 1;
 }
 
 
